# simple-proxy

./: .gitignore  Cargo.toml  README.md  flake.nix
amplitude/: Cargo.toml
amplitude/src/: bindings.rs  lib.rs
amplitude/wit/: world.wit
proxy/: Cargo.toml  amplitude.wasm
proxy/src/: main.rs
