[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
miette = { version = "7.2.0", features = ["fancy"] }
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wasmtime = "20.0.0"
wasmtime-wasi = "20.0.0"
